parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> structs funcs
Rule 2     program -> funcs
Rule 3     structs -> structs struct
Rule 4     structs -> struct
Rule 5     struct -> STRUCT NAME LBRACE fields RBRACE
Rule 6     fields -> fields field
Rule 7     fields -> field
Rule 8     field -> NAME COLON NAME SEMI
Rule 9     funcs -> funcs func
Rule 10    funcs -> func
Rule 11    func -> FUNC NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
Rule 12    func -> FUNC NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
Rule 13    func -> FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
Rule 14    func -> FUNC NAME LPAREN RPAREN LBRACE statements RBRACE
Rule 15    formal_args -> formal_args COMMA formal_arg
Rule 16    formal_args -> formal_arg
Rule 17    formal_arg -> NAME COLON NAME
Rule 18    formal_arg -> NAME
Rule 19    statements -> statements statement
Rule 20    statements -> statement
Rule 21    statement -> assign SEMI
Rule 22    assign -> variable_w_dot ASSIGN expression
Rule 23    statement -> VAR variable COLON NAME SEMI
Rule 24    statement -> VAR variable SEMI
Rule 25    variable -> NAME
Rule 26    variable_w_dot -> variable_w_dot DOT NAME
Rule 27    variable_w_dot -> NAME
Rule 28    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 29    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 30    statement -> TRY LBRACE statements RBRACE catchers
Rule 31    catchers -> catchers catch
Rule 32    catchers -> catch
Rule 33    catch -> CATCH STRING LBRACE statements RBRACE
Rule 34    statement -> FOR LPAREN assign SEMI expression SEMI assign RPAREN LBRACE statements RBRACE
Rule 35    statement -> RAISE expression SEMI
Rule 36    statement -> expression SEMI
Rule 37    statement -> RETURN expression SEMI
Rule 38    statement -> RETURN SEMI
Rule 39    expression -> NOT expression
Rule 40    expression -> MINUS expression
Rule 41    expression -> NEW NAME
Rule 42    expression -> expression EQ expression
Rule 43    expression -> expression GREATER expression
Rule 44    expression -> expression LESS expression
Rule 45    expression -> expression NOT_EQ expression
Rule 46    expression -> expression GREATER_EQ expression
Rule 47    expression -> expression LESS_EQ expression
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression MULTIPLY expression
Rule 51    expression -> expression DIVIDE expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> expression OR expression
Rule 54    expression -> expression AND expression
Rule 55    expression -> NUMBER
Rule 56    expression -> TRUE
Rule 57    expression -> FALSE
Rule 58    expression -> NIL
Rule 59    expression -> STRING
Rule 60    expression -> variable_w_dot
Rule 61    expression -> NAME LPAREN args RPAREN
Rule 62    expression -> NAME LPAREN RPAREN
Rule 63    args -> args COMMA expression
Rule 64    args -> expression

Terminals, with rules where they appear

AND                  : 54
ASSIGN               : 22
CATCH                : 33
COLON                : 8 11 12 17 23
COMMA                : 15 63
DIVIDE               : 51
DOT                  : 26
ELSE                 : 29
EQ                   : 42
FALSE                : 57
FOR                  : 34
FUNC                 : 11 12 13 14
GREATER              : 43
GREATER_EQ           : 46
IF                   : 28 29
LBRACE               : 5 11 12 13 14 28 29 29 30 33 34
LESS                 : 44
LESS_EQ              : 47
LPAREN               : 11 12 13 14 28 29 34 52 61 62
MINUS                : 40 49
MULTIPLY             : 50
NAME                 : 5 8 8 11 11 12 12 13 14 17 17 18 23 25 26 27 41 61 62
NEW                  : 41
NIL                  : 58
NOT                  : 39
NOT_EQ               : 45
NUMBER               : 55
OR                   : 53
PLUS                 : 48
RAISE                : 35
RBRACE               : 5 11 12 13 14 28 29 29 30 33 34
RETURN               : 37 38
RPAREN               : 11 12 13 14 28 29 34 52 61 62
SEMI                 : 8 21 23 24 34 34 35 36 37 38
STRING               : 33 59
STRUCT               : 5
TRUE                 : 56
TRY                  : 30
VAR                  : 23 24
error                : 

Nonterminals, with rules where they appear

args                 : 61 63
assign               : 21 34 34
catch                : 31 32
catchers             : 30 31
expression           : 22 28 29 34 35 36 37 39 40 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 53 54 54 63 64
field                : 6 7
fields               : 5 6
formal_arg           : 15 16
formal_args          : 11 13 15
func                 : 9 10
funcs                : 1 2 9
program              : 0
statement            : 19 20
statements           : 11 12 13 14 19 28 29 29 30 33 34
struct               : 3 4
structs              : 1 3
variable             : 23 24
variable_w_dot       : 22 26 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . structs funcs
    (2) program -> . funcs
    (3) structs -> . structs struct
    (4) structs -> . struct
    (9) funcs -> . funcs func
    (10) funcs -> . func
    (5) struct -> . STRUCT NAME LBRACE fields RBRACE
    (11) func -> . FUNC NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> . FUNC NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    STRUCT          shift and go to state 6
    FUNC            shift and go to state 7

    program                        shift and go to state 1
    structs                        shift and go to state 2
    funcs                          shift and go to state 3
    struct                         shift and go to state 4
    func                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> structs . funcs
    (3) structs -> structs . struct
    (9) funcs -> . funcs func
    (10) funcs -> . func
    (5) struct -> . STRUCT NAME LBRACE fields RBRACE
    (11) func -> . FUNC NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> . FUNC NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    STRUCT          shift and go to state 6
    FUNC            shift and go to state 7

    funcs                          shift and go to state 8
    struct                         shift and go to state 9
    func                           shift and go to state 5

state 3

    (2) program -> funcs .
    (9) funcs -> funcs . func
    (11) func -> . FUNC NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> . FUNC NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    $end            reduce using rule 2 (program -> funcs .)
    FUNC            shift and go to state 7

    func                           shift and go to state 10

state 4

    (4) structs -> struct .

    STRUCT          reduce using rule 4 (structs -> struct .)
    FUNC            reduce using rule 4 (structs -> struct .)


state 5

    (10) funcs -> func .

    FUNC            reduce using rule 10 (funcs -> func .)
    $end            reduce using rule 10 (funcs -> func .)


state 6

    (5) struct -> STRUCT . NAME LBRACE fields RBRACE

    NAME            shift and go to state 11


state 7

    (11) func -> FUNC . NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> FUNC . NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> FUNC . NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> FUNC . NAME LPAREN RPAREN LBRACE statements RBRACE

    NAME            shift and go to state 12


state 8

    (1) program -> structs funcs .
    (9) funcs -> funcs . func
    (11) func -> . FUNC NAME LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> . FUNC NAME LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    $end            reduce using rule 1 (program -> structs funcs .)
    FUNC            shift and go to state 7

    func                           shift and go to state 10

state 9

    (3) structs -> structs struct .

    STRUCT          reduce using rule 3 (structs -> structs struct .)
    FUNC            reduce using rule 3 (structs -> structs struct .)


state 10

    (9) funcs -> funcs func .

    FUNC            reduce using rule 9 (funcs -> funcs func .)
    $end            reduce using rule 9 (funcs -> funcs func .)


state 11

    (5) struct -> STRUCT NAME . LBRACE fields RBRACE

    LBRACE          shift and go to state 13


state 12

    (11) func -> FUNC NAME . LPAREN formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> FUNC NAME . LPAREN RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> FUNC NAME . LPAREN formal_args RPAREN LBRACE statements RBRACE
    (14) func -> FUNC NAME . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 14


state 13

    (5) struct -> STRUCT NAME LBRACE . fields RBRACE
    (6) fields -> . fields field
    (7) fields -> . field
    (8) field -> . NAME COLON NAME SEMI

    NAME            shift and go to state 15

    fields                         shift and go to state 16
    field                          shift and go to state 17

state 14

    (11) func -> FUNC NAME LPAREN . formal_args RPAREN COLON NAME LBRACE statements RBRACE
    (12) func -> FUNC NAME LPAREN . RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> FUNC NAME LPAREN . formal_args RPAREN LBRACE statements RBRACE
    (14) func -> FUNC NAME LPAREN . RPAREN LBRACE statements RBRACE
    (15) formal_args -> . formal_args COMMA formal_arg
    (16) formal_args -> . formal_arg
    (17) formal_arg -> . NAME COLON NAME
    (18) formal_arg -> . NAME

    RPAREN          shift and go to state 20
    NAME            shift and go to state 18

    formal_args                    shift and go to state 19
    formal_arg                     shift and go to state 21

state 15

    (8) field -> NAME . COLON NAME SEMI

    COLON           shift and go to state 22


state 16

    (5) struct -> STRUCT NAME LBRACE fields . RBRACE
    (6) fields -> fields . field
    (8) field -> . NAME COLON NAME SEMI

    RBRACE          shift and go to state 23
    NAME            shift and go to state 15

    field                          shift and go to state 24

state 17

    (7) fields -> field .

    RBRACE          reduce using rule 7 (fields -> field .)
    NAME            reduce using rule 7 (fields -> field .)


state 18

    (17) formal_arg -> NAME . COLON NAME
    (18) formal_arg -> NAME .

    COLON           shift and go to state 25
    RPAREN          reduce using rule 18 (formal_arg -> NAME .)
    COMMA           reduce using rule 18 (formal_arg -> NAME .)


state 19

    (11) func -> FUNC NAME LPAREN formal_args . RPAREN COLON NAME LBRACE statements RBRACE
    (13) func -> FUNC NAME LPAREN formal_args . RPAREN LBRACE statements RBRACE
    (15) formal_args -> formal_args . COMMA formal_arg

    RPAREN          shift and go to state 26
    COMMA           shift and go to state 27


state 20

    (12) func -> FUNC NAME LPAREN RPAREN . COLON NAME LBRACE statements RBRACE
    (14) func -> FUNC NAME LPAREN RPAREN . LBRACE statements RBRACE

    COLON           shift and go to state 28
    LBRACE          shift and go to state 29


state 21

    (16) formal_args -> formal_arg .

    RPAREN          reduce using rule 16 (formal_args -> formal_arg .)
    COMMA           reduce using rule 16 (formal_args -> formal_arg .)


state 22

    (8) field -> NAME COLON . NAME SEMI

    NAME            shift and go to state 30


state 23

    (5) struct -> STRUCT NAME LBRACE fields RBRACE .

    STRUCT          reduce using rule 5 (struct -> STRUCT NAME LBRACE fields RBRACE .)
    FUNC            reduce using rule 5 (struct -> STRUCT NAME LBRACE fields RBRACE .)


state 24

    (6) fields -> fields field .

    RBRACE          reduce using rule 6 (fields -> fields field .)
    NAME            reduce using rule 6 (fields -> fields field .)


state 25

    (17) formal_arg -> NAME COLON . NAME

    NAME            shift and go to state 31


state 26

    (11) func -> FUNC NAME LPAREN formal_args RPAREN . COLON NAME LBRACE statements RBRACE
    (13) func -> FUNC NAME LPAREN formal_args RPAREN . LBRACE statements RBRACE

    COLON           shift and go to state 32
    LBRACE          shift and go to state 33


state 27

    (15) formal_args -> formal_args COMMA . formal_arg
    (17) formal_arg -> . NAME COLON NAME
    (18) formal_arg -> . NAME

    NAME            shift and go to state 18

    formal_arg                     shift and go to state 34

state 28

    (12) func -> FUNC NAME LPAREN RPAREN COLON . NAME LBRACE statements RBRACE

    NAME            shift and go to state 35


state 29

    (14) func -> FUNC NAME LPAREN RPAREN LBRACE . statements RBRACE
    (19) statements -> . statements statement
    (20) statements -> . statement
    (21) statement -> . assign SEMI
    (23) statement -> . VAR variable COLON NAME SEMI
    (24) statement -> . VAR variable SEMI
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (30) statement -> . TRY LBRACE statements RBRACE catchers
    (34) statement -> . FOR LPAREN assign SEMI expression SEMI assign RPAREN LBRACE statements RBRACE
    (35) statement -> . RAISE expression SEMI
    (36) statement -> . expression SEMI
    (37) statement -> . RETURN expression SEMI
    (38) statement -> . RETURN SEMI
    (22) assign -> . variable_w_dot ASSIGN expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . NEW NAME
    (42) expression -> . expression EQ expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESS expression
    (45) expression -> . expression NOT_EQ expression
    (46) expression -> . expression GREATER_EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . expression OR expression
    (54) expression -> . expression AND expression
    (55) expression -> . NUMBER
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NIL
    (59) expression -> . STRING
    (60) expression -> . variable_w_dot
    (61) expression -> . NAME LPAREN args RPAREN
    (62) expression -> . NAME LPAREN RPAREN
    (26) variable_w_dot -> . variable_w_dot DOT NAME
    (27) variable_w_dot -> . NAME

    VAR             shift and go to state 41
    IF              shift and go to state 42
    TRY             shift and go to state 44
    FOR             shift and go to state 45
    RAISE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    NEW             shift and go to state 51
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NIL             shift and go to state 55
    STRING          shift and go to state 56
    NAME            shift and go to state 36

    statements                     shift and go to state 38
    statement                      shift and go to state 39
    assign                         shift and go to state 40
    expression                     shift and go to state 43
    variable_w_dot                 shift and go to state 48

state 30

    (8) field -> NAME COLON NAME . SEMI

    SEMI            shift and go to state 57


state 31

    (17) formal_arg -> NAME COLON NAME .

    RPAREN          reduce using rule 17 (formal_arg -> NAME COLON NAME .)
    COMMA           reduce using rule 17 (formal_arg -> NAME COLON NAME .)


state 32

    (11) func -> FUNC NAME LPAREN formal_args RPAREN COLON . NAME LBRACE statements RBRACE

    NAME            shift and go to state 58


state 33

    (13) func -> FUNC NAME LPAREN formal_args RPAREN LBRACE . statements RBRACE
    (19) statements -> . statements statement
    (20) statements -> . statement
    (21) statement -> . assign SEMI
    (23) statement -> . VAR variable COLON NAME SEMI
    (24) statement -> . VAR variable SEMI
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (30) statement -> . TRY LBRACE statements RBRACE catchers
    (34) statement -> . FOR LPAREN assign SEMI expression SEMI assign RPAREN LBRACE statements RBRACE
    (35) statement -> . RAISE expression SEMI
    (36) statement -> . expression SEMI
    (37) statement -> . RETURN expression SEMI
    (38) statement -> . RETURN SEMI
    (22) assign -> . variable_w_dot ASSIGN expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . NEW NAME
    (42) expression -> . expression EQ expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESS expression
    (45) expression -> . expression NOT_EQ expression
    (46) expression -> . expression GREATER_EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . expression OR expression
    (54) expression -> . expression AND expression
    (55) expression -> . NUMBER
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NIL
    (59) expression -> . STRING
    (60) expression -> . variable_w_dot
    (61) expression -> . NAME LPAREN args RPAREN
    (62) expression -> . NAME LPAREN RPAREN
    (26) variable_w_dot -> . variable_w_dot DOT NAME
    (27) variable_w_dot -> . NAME

    VAR             shift and go to state 41
    IF              shift and go to state 42
    TRY             shift and go to state 44
    FOR             shift and go to state 45
    RAISE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    NEW             shift and go to state 51
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NIL             shift and go to state 55
    STRING          shift and go to state 56
    NAME            shift and go to state 36

    statements                     shift and go to state 59
    statement                      shift and go to state 39
    assign                         shift and go to state 40
    expression                     shift and go to state 43
    variable_w_dot                 shift and go to state 48

state 34

    (15) formal_args -> formal_args COMMA formal_arg .

    RPAREN          reduce using rule 15 (formal_args -> formal_args COMMA formal_arg .)
    COMMA           reduce using rule 15 (formal_args -> formal_args COMMA formal_arg .)


state 35

    (12) func -> FUNC NAME LPAREN RPAREN COLON NAME . LBRACE statements RBRACE

    LBRACE          shift and go to state 60


state 36

    (61) expression -> NAME . LPAREN args RPAREN
    (62) expression -> NAME . LPAREN RPAREN
    (27) variable_w_dot -> NAME .

    LPAREN          shift and go to state 61
    ASSIGN          reduce using rule 27 (variable_w_dot -> NAME .)
    DOT             reduce using rule 27 (variable_w_dot -> NAME .)
    SEMI            reduce using rule 27 (variable_w_dot -> NAME .)
    EQ              reduce using rule 27 (variable_w_dot -> NAME .)
    GREATER         reduce using rule 27 (variable_w_dot -> NAME .)
    LESS            reduce using rule 27 (variable_w_dot -> NAME .)
    NOT_EQ          reduce using rule 27 (variable_w_dot -> NAME .)
    GREATER_EQ      reduce using rule 27 (variable_w_dot -> NAME .)
    LESS_EQ         reduce using rule 27 (variable_w_dot -> NAME .)
    PLUS            reduce using rule 27 (variable_w_dot -> NAME .)
    MINUS           reduce using rule 27 (variable_w_dot -> NAME .)
    MULTIPLY        reduce using rule 27 (variable_w_dot -> NAME .)
    DIVIDE          reduce using rule 27 (variable_w_dot -> NAME .)
    OR              reduce using rule 27 (variable_w_dot -> NAME .)
    AND             reduce using rule 27 (variable_w_dot -> NAME .)
    RPAREN          reduce using rule 27 (variable_w_dot -> NAME .)
    COMMA           reduce using rule 27 (variable_w_dot -> NAME .)


state 37

    (52) expression -> LPAREN . expression RPAREN
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . NEW NAME
    (42) expression -> . expression EQ expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESS expression
    (45) expression -> . expression NOT_EQ expression
    (46) expression -> . expression GREATER_EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . expression OR expression
    (54) expression -> . expression AND expression
    (55) expression -> . NUMBER
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NIL
    (59) expression -> . STRING
    (60) expression -> . variable_w_dot
    (61) expression -> . NAME LPAREN args RPAREN
    (62) expression -> . NAME LPAREN RPAREN
    (26) variable_w_dot -> . variable_w_dot DOT NAME
    (27) variable_w_dot -> . NAME

    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    NEW             shift and go to state 51
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NIL             shift and go to state 55
    STRING          shift and go to state 56
    NAME            shift and go to state 36

    expression                     shift and go to state 62
    variable_w_dot                 shift and go to state 63

state 38

    (14) func -> FUNC NAME LPAREN RPAREN LBRACE statements . RBRACE
    (19) statements -> statements . statement
    (21) statement -> . assign SEMI
    (23) statement -> . VAR variable COLON NAME SEMI
    (24) statement -> . VAR variable SEMI
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (30) statement -> . TRY LBRACE statements RBRACE catchers
    (34) statement -> . FOR LPAREN assign SEMI expression SEMI assign RPAREN LBRACE statements RBRACE
    (35) statement -> . RAISE expression SEMI
    (36) statement -> . expression SEMI
    (37) statement -> . RETURN expression SEMI
    (38) statement -> . RETURN SEMI
    (22) assign -> . variable_w_dot ASSIGN expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . NEW NAME
    (42) expression -> . expression EQ expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESS expression
    (45) expression -> . expression NOT_EQ expression
    (46) expression -> . expression GREATER_EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . expression OR expression
    (54) expression -> . expression AND expression
    (55) expression -> . NUMBER
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NIL
    (59) expression -> . STRING
    (60) expression -> . variable_w_dot
    (61) expression -> . NAME LPAREN args RPAREN
    (62) expression -> . NAME LPAREN RPAREN
    (26) variable_w_dot -> . variable_w_dot DOT NAME
    (27) variable_w_dot -> . NAME

    RBRACE          shift and go to state 64
    VAR             shift and go to state 41
    IF              shift and go to state 42
    TRY             shift and go to state 44
    FOR             shift and go to state 45
    RAISE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    NEW             shift and go to state 51
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NIL             shift and go to state 55
    STRING          shift and go to state 56
    NAME            shift and go to state 36

    statement                      shift and go to state 65
    assign                         shift and go to state 40
    expression                     shift and go to state 43
